# led_manager

./: .coverage  .env  .env-example  .gitignore  README  backup.db  ip_address_manager.db  ip_manager.db  patch_dnsmasq.py  patch_template.py  patch_tests.py  pyproject.toml
.github/: copilot-instructions.md
app/: app.py  db.py
app/crud/: device_crud.py  player_crud.py  receiver_crud.py
app/models/: device.py  form_error.py  player.py  receiver.py  sort.py
app/services/: __init__.py  arp_scanner.py  dnsmasq_manager.py  monitor_hub.py  ping_dependencies.py  ping_manager.py  ping_probe.py  update_manager.py
app/static/: index.css
app/templates/: index.html
app/templates/buttons/: add_device_button.html  (+4 more)
app/utils/: exceptions.py  form_parsing.py  formatting.py  write_devices.py
app/webapp_routes/: device_button_routes.py  device_routes.py  monitor_button_routes.py  monitor_routes.py  monitor_ws_routes.py  player_button_routes.py  receiver_button_routes.py  receiver_routes.py  update_routes.py
tests/crud/: test_device_crud.py  test_player_crud.py  test_receiver_crud.py
tests/models/: test_device.py  test_player.py  test_receiver.py
tests/routes/: test_button_routes.py  test_device_button_routes.py  test_device_routes.py  test_monitor_button_routes.py  test_monitor_ws_routes.py  test_player_routes.py  test_receiver_routes.py  test_update_routes.py
tests/services/: test_arp_scanner.py  test_dnsmasq_manager.py  test_ping_manager.py  test_ping_probe.py  test_update_manager.py
tests/utils/: test_exceptions.py  test_formatting.py  test_write_devices.py
(+25 files in other folders)
