[tool.poetry]
name = "ip-address-manager"
version = "0.1.0"
description = ""
authors = ["Sam Hoile <samuel.hoile@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.124.4"}
sqlmodel = "^0.0.27"
psycopg = {extras = ["binary"], version = "^3.3.2"}
jinja2 = "^3.1.6"
python-multipart = "^0.0.20"
uvicorn = "^0.38.0"
pydantic = "^2.12.5"
websockets = "^16.0"
dotenv = "^0.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-timeout = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
